[package]
name = "entropyx-consensus"
description = "EntropyX consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
entropyx-consensus-core.workspace = true
entropyx-consensus-notify.workspace = true
entropyx-consensusmanager.workspace = true
entropyx-core.workspace = true
entropyx-database.workspace = true
entropyx-hashes.workspace = true
entropyx-math.workspace = true
entropyx-merkle.workspace = true
entropyx-muhash.workspace = true
entropyx-notify.workspace = true
entropyx-pow.workspace = true
entropyx-txscript.workspace = true
entropyx-txscript-errors.workspace = true
entropyx-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
entropyx-txscript-errors.workspace = true

[[bench]]
name = "hash_benchmarks"
harness = false

[features]
html_reports = []
devnet-prealloc = ["entropyx-consensus-core/devnet-prealloc"]
