[package]
name = "rothschild"
description = "EntropyX Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
entropyx-addresses.workspace = true
entropyx-consensus-core.workspace = true
entropyx-core.workspace = true
entropyx-grpc-client.workspace = true
entropyx-notify.workspace = true
entropyx-rpc-core.workspace = true
entropyx-txscript.workspace = true
entropyx-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
