[package]
name = "simpa"
description = "EntropyX Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
entropyx-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
entropyx-consensus-core.workspace = true
entropyx-consensus-notify.workspace = true
entropyx-consensus.workspace = true
entropyx-core.workspace = true
entropyx-database.workspace = true
entropyx-hashes.workspace = true
entropyx-perf-monitor.workspace = true
entropyx-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "entropyx-alloc/heap"]
semaphore-trace = ["entropyx-utils/semaphore-trace"]
