[package]
name = "entropyx-wasm"
description = "ENX WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
entropyx-addresses.workspace = true
entropyx-bip32.workspace = true
entropyx-consensus-core.workspace = true
entropyx-consensus-wasm.workspace = true
entropyx-core.workspace = true
entropyx-math.workspace = true
entropyx-pow.workspace = true
entropyx-txscript.workspace = true
entropyx-rpc-core.workspace = true
entropyx-utils.workspace = true
entropyx-wasm-core.workspace = true
entropyx-wallet-core.workspace = true
entropyx-wallet-keys.workspace = true
entropyx-wrpc-client.workspace = true
entropyx-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features] 
wasm32-sdk = [
    "entropyx-wallet-core/wasm32-sdk",
    "entropyx-pow/wasm32-sdk",
    "entropyx-txscript/wasm32-sdk",
]
wasm32-core = [
    "entropyx-wallet-core/wasm32-core",
    "entropyx-pow/wasm32-sdk",
    "entropyx-txscript/wasm32-sdk",
]
wasm32-rpc = [
    "entropyx-consensus-core/wasm32-sdk",
    "entropyx-consensus-wasm/wasm32-sdk",
    "entropyx-wrpc-client/wasm32-sdk",
    "entropyx-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/entropyx" },
    { target = "web", out-dir = "web/entropyx" }
]
folder = "setup"
