[package]
name = "entropyx-connectionmanager"
description = "EntropyX connection manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
entropyx-addressmanager.workspace = true
entropyx-core.workspace = true
entropyx-p2p-lib.workspace = true
entropyx-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true