[package]
name = "entropyx-consensus-notify"
description = "EntropyX consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
entropyx-consensus-core.workspace = true
entropyx-core.workspace = true
entropyx-hashes.workspace = true
entropyx-notify.workspace = true
entropyx-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true
