[package]
name = "entropyx-pow"
description = "EntropyX proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []

[dependencies]
js-sys.workspace = true
entropyx-consensus-core.workspace = true
entropyx-consensus-client.workspace = true
entropyx-hashes.workspace = true
entropyx-math.workspace = true
entropyx-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
