[package]
name = "entropyx-index-core"
description = "EntropyX index core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
entropyx-consensus-core.workspace = true
entropyx-hashes.workspace = true
entropyx-notify.workspace = true
entropyx-utils.workspace = true
log.workspace = true
paste.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true

[dev-dependencies]
# parking_lot.workspace = true
# tokio = { workspace = true, features = ["rt", "macros"] }
# rand = {workspace = true,  features = [ "small_rng" ]}