[package]
name = "entropyx-rpc-service"
description = "EntropyX RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
entropyx-addresses.workspace = true
entropyx-consensus-core.workspace = true
entropyx-consensus-notify.workspace = true
entropyx-consensusmanager.workspace = true
entropyx-core.workspace = true
entropyx-hashes.workspace = true
entropyx-index-core.workspace = true
entropyx-math.workspace = true
entropyx-mining.workspace = true
entropyx-notify.workspace = true
entropyx-p2p-flows.workspace = true
entropyx-p2p-lib.workspace = true
entropyx-perf-monitor.workspace = true
entropyx-rpc-core.workspace = true
entropyx-txscript.workspace = true
entropyx-utils.workspace = true
entropyx-utils-tower.workspace = true
entropyx-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true