[package]
name = "entropyx-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
entropyx-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

entropyx-addresses.workspace = true
entropyx-bip32.workspace = true
entropyx-consensus-core.workspace = true
entropyx-consensus-notify.workspace = true
entropyx-consensus.workspace = true
entropyx-consensusmanager.workspace = true
entropyx-core.workspace = true
entropyx-database.workspace = true
entropyx-grpc-client.workspace = true
entropyx-grpc-core.workspace = true
entropyx-grpc-server.workspace = true
entropyx-hashes.workspace = true
entropyx-index-processor.workspace = true
entropyx-math.workspace = true
entropyx-merkle.workspace = true
entropyx-muhash.workspace = true
entropyx-notify.workspace = true
entropyx-pow.workspace = true
entropyx-rpc-core.workspace = true
entropyx-rpc-service.workspace = true
entropyx-txscript.workspace = true
entropyx-utils.workspace = true
entropyx-utxoindex.workspace = true
entropyx-wrpc-server.workspace = true
entropyx.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
entropyx-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["entropyx/devnet-prealloc"]
