[package]
name = "entropyx-grpc-server"
description = "EntropyX gRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
entropyx-consensus-core.workspace = true
entropyx-core.workspace = true
entropyx-grpc-core.workspace = true
entropyx-notify.workspace = true
entropyx-rpc-core.workspace = true
entropyx-rpc-macros.workspace = true
entropyx-rpc-service.workspace = true
entropyx-utils-tower.workspace = true
entropyx-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
uuid.workspace = true
rustls.workspace = true

[dev-dependencies]
entropyx-grpc-client.workspace = true
